# DummyDB

./: CMakeLists.txt  README.md  conandata.yml  main.cpp
src/: constants.h
src/Database/: Database.cpp  Database.h
src/Encryption/: Encryption.cpp  Encryption.h
src/FileHandler/: FileHandler.cpp  FileHandler.h
src/Index/: Index.cpp  Index.h
src/Record/: Record.cpp  Record.h
src/SQLParser/: SQLParser.cpp  SQLParser.h
src/Table/: Table.cpp  Table.h
src/Transaction/: Transaction.cpp  Transaction.h
src/WhereClause/: WhereClause.cpp  WhereClause.h
